@@ -164,7 +164,7 @@ public class XMLUtils {
                 list.add(jsonObject);
             }
             if (list.size() == 1) {
-                result.put(node.getName(), list.getFirst());
+                result.put(node.getName(), list.get(0));
             } else {
                 result.put(node.getName(), list);
             }
